--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.15.6",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
+    "jsonp": "^0.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
